Fixed mongo query
